---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: ????
  Info:
    - Align result quality over the chimney
    - Fix second offering
    - Use the recipe quality as the shown quality
    - Draw the quality icon nice and large
    - Allow users access to the quality dropdown
    - Use a whole bunch of items as placeholder
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 02. 02
  Info:
    - Module positioning
    - Use my hurricane crafter graphic set generator
    - Make the base quality setting a double
    - Update thumbnail
    - Change debounce from 5 to 2.5 seconds
    - Draw the 4 items in the base larger
    - Detect recipe done
    - Maybe better deathrattler?
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 01. 31
  Info:
    - Resume development
    - Do not drop a rocket silo
    - Setup the hidden surface
    - Sum the total items inside with circuits
    - Add note about the machine being ticked
    - Prepare the recipe icon
    - Lock the quality disruptor to an "any quality" recipe
    - Test with the repair pack
    - Make the entity blueprintable
    - Rename furnace to crafter
    - Get a reset pulse every time the sum changes
    - Add the counter itself
    - Tuck the combinator setup away in another file
    - Rebrand from quality disruptor to quality condenser
    - Add research center skin (as an option)
    - Hide the alt recipe icon
    - Use automated insertion!
    - Render the modules large and offset
    - Add configurable base quality ("items per next quality")
    - `draw_as_glow = true`
    - Add an inserter that waits for 5 seconds
    - Increase selection area
    - Prevent highlighting by inserters
    - Only match the tick to make re-arming simpler
    - Fix flag typo