@@ -10,7 +10,7 @@ quality-condenser--skin=Appearance
 quality-condenser--base-quality=Base quality
 
 [item-name]
-quality-condenser--recipe=A whole bunch of items
+quality-condenser--a-whole-bunch-of-items=A whole bunch of items
 
 [recipe-name]
-quality-condenser--recipe=Quality condenser
+quality-condenser--a-whole-bunch-of-items=Quality condenser
